support for markdown

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "marked": "^0.3.6",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
