--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "lodash.debounce": "^4.0.8",
     "marked": "^0.3.6",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
